# plai

./: README.md
exercises/ml/: Shriram Krishnamurthi-20200909-Introduction to Mystery Languages.mp4.mkv
exercises/mystery_languages/: #fun-calls.rkt#1#  arithmetic.rkt  conditionals.rkt  fun-calls.rkt  scope.rkt  strings.rkt
exercises/stacker/: OStacks Handout.odt  Stacks 1 Handout.odt  Stacks 2 Handout.odt
implementation/instructions/: 1 Testing Guidelines.html  10 From Assertions to Security.html  2 Interpreter.html  3 Desugar.html  4 Macros.html  5 OMac.html  6 Type Checker.html  7 SMoLTalk.html  8 Type Checking and Interpretation.html  9 Lazy.html  Implementation.html
implementation/instructions/Implementation_files/: my-style-changes.css
implementation/interp/: interpreter-tests.rkt  interpreter.rkt  support.rkt  test-support.rkt
walk_through/: .gitignore  Cargo.toml  Makefile  README.md  evaluation.py  evaluation.rkt  evaluation.rs  evaluation_test.rkt  make_tests.rs  pyproject.toml  test_definitions.csv
